--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -1,16 +1,24 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>BLOGPOST</title>
+
 </head>
-<body>
+
+<body >
+
+
 <h2>Blog post</h2>
 {% for post in posts %}
 
     <h2>{{ post.title }}</h2>
     <p>{{ post.content }}</p>
     <p>Author:{{ post.author }}</p>
+    <p> phone :{{ post.phone }}</p>
+    <p>Email: {{ post.email }}</p>
     <p>Created at :{{ post.created_at }}</p>
 
 {% endfor %}
